Footer overlap fix

--- a/style.css
+++ b/style.css
@@ -84,9 +84,10 @@ footer {
     color: #fff;
     text-align: center;
     padding: 1em;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
+    margin-top: 35px;
 }
 
 a {
